# zaoai

./: .gitignore  Cargo.toml  README.md  test.dot  zaoai_nn_layout.dot
src/: app.rs  app_windows.rs  egui_ext.rs  error.rs  filesystem.rs  graphviz.rs  graphviz_concat.rs  graphviz_examples.rs  main.rs  mnist.rs  simpletest.rs  sound.rs  zneural_network.rs
src/zneural_network/: datapoint.rs  layer.rs  mod.rs  neuralnetwork.rs  spectrogram.rs  thread.rs  training.rs
zaoai/: .gitignore  Cargo.toml  License  README.md  asd  asd.html  log.asd
zaoai-helper/src/: main.rs
zaoai-types/src/: ai_labels.rs  mkv.rs  sound.rs  spectrogram.rs
zaoai/img/: NN.dot
zaoai/src/: app.rs  app_windows.rs  egui_ext.rs  main.rs
zaoai/src/zneural_network/: activation.rs  cost.rs  datapoint.rs  is_correct.rs  layer.rs  mod.rs  neuralnetwork.rs  thread.rs  training.rs
